# neophytic-rooms-purple-base

./: README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
local_run/: local_run.py
src/: agent.py  executor.py  server.py
tests/: conftest.py  test_agent.py
